--- a/cfm/cfm.ipynb
+++ b/cfm/cfm.ipynb
@@ -293,8 +293,7 @@
     }
    ],
    "source": [
-    "# if we add another embedding we can just add it to the list here\n",
-    "for embedding in [\"X\"]:\n",
+    "for embedding in [\"X\"]: # if we wanted to run in the PCA \"latent\" as well we would use [\"X\", \"X_pca\"]\n",
     "    print(embedding)\n",
     "    # set X to the (latent) counts\n",
     "    X = adata.obsm[embedding]\n",
@@ -303,13 +302,15 @@
     "    control_train = X[control_idx & ~eval_idx]\n",
     "    pert_train = X[pert_idx & ~eval_idx]\n",
     "    pert_ids_train =  pert_ids[pert_idx & ~eval_idx]\n",
+    "    control_cell_types = cell_types[control_idx & ~eval_idx]\n",
+    "    pert_cell_types = cell_types[pert_idx & ~eval_idx]\n",
     "    \n",
     "    control_eval = X[control_idx & eval_cell_idx]\n",
     "    pert_eval = X[eval_idx]\n",
     "    pert_ids_eval = pert_ids[eval_idx]\n",
     "\n",
     "    # set up data processing for cfm\n",
-    "    dset = CFMDataset(control_train, pert_train, pert_ids_train, pert_mat)\n",
+    "    dset = SCFMDataset(control_train, pert_train, pert_ids_train, pert_mat, control_cell_types, pert_cell_types)\n",
     "    dl = torch.utils.data.DataLoader(dset, batch_size=32, collate_fn=cfm_collate)\n",
     "    \n",
     "    # Train the model\n",
