updated for sup code

--- a/cfm/cfm.ipynb
+++ b/cfm/cfm.ipynb
@@ -2,13 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "from datamodules import FMDataset, fm_collate, CFMDataset, SCFMDataset, cfm_collate\n",
+    "from datamodules import FMDataset, fm_collate, CFMDataset, SCFMDataset, cfm_collate, ot_collate\n",
     "from arch import *\n",
     "from flow_utils import compute_conditional_flow\n",
     "\n",
@@ -29,12 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load some data\n",
-    "adata = sc.read_h5ad('../../../dlesman/datasets/cellot/kaggle_HVG_cellot.h5ad')\n",
+    "adata = sc.read_h5ad('/orcd/archive/abugoot/001/Projects/dlesman/datasets/kaggle_HVG.h5ad')\n",
     "\n",
     "# here we set up the train/eval and control/pert sets\n",
     "# set the idx of the controls\n",
@@ -49,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,17 +129,103 @@
     "    control_train, pert_train, \n",
     "    pert_ids_train, pert_mat, \n",
     ")\n",
-    "dl = torch.utils.data.DataLoader(dset, batch_size=batch_size, collate_fn=cfm_collate)"
+    "dl = torch.utils.data.DataLoader(dset, batch_size=batch_size, collate_fn=ot_collate)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torch.utils.data import BatchSampler, SequentialSampler, Sampler\n",
-    "from typing import Iterator, Iterable, Optional, Sequence, List, TypeVar, Generic, Sized, Union\n"
+    "model = CMLP(training_module=CFM, feat_dim=X.shape[1], cond_dim=pert_mat.shape[1], time_varying=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = CMLP(training_module=MSE, feat_dim=X.shape[1], cond_dim=pert_mat.shape[1], time_varying=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([32, 18])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(iter(dl))[2].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "GPU available: True (cuda), used: True\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "IPU available: False, using: 0 IPUs\n",
+      "HPU available: False, using: 0 HPUs\n",
+      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
+      "\n",
+      "  | Name      | Type       | Params\n",
+      "-----------------------------------------\n",
+      "0 | combo_net | Sequential | 547 K \n",
+      "1 | cond_net  | Sequential | 35.5 K\n",
+      "-----------------------------------------\n",
+      "582 K     Trainable params\n",
+      "0         Non-trainable params\n",
+      "582 K     Total params\n",
+      "2.330     Total estimated model params size (MB)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c87be00e82e44860b17a4c85c0ae3d93",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`Trainer.fit` stopped: `max_epochs=100` reached.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train the model\n",
+    "trainer = pl.Trainer(\n",
+    "    gpus=1,  # Specify the number of GPUs to use\n",
+    "    max_epochs=100,  # Specify the maximum number of training epochs\n",
+    ")\n",
+    "# model = CMLP(feat_dim=X.shape[1], cond_dim=pert_mat.shape[1], time_varying=True)\n",
+    "trainer.fit(model, dl)"
    ]
   },
   {
@@ -138,78 +233,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "class StratifiedBatchSampler(Sampler[List[int]]):\n",
-    "    r\"\"\"Wraps another sampler to yield a mini-batch of indices.\n",
-    "\n",
-    "    Args:\n",
-    "        sampler (Sampler or Iterable): Base sampler. Can be any iterable object\n",
-    "        batch_size (int): Size of mini-batch.\n",
-    "        drop_last (bool): If ``True``, the sampler will drop the last batch if\n",
-    "            its size would be less than ``batch_size``\n",
-    "\n",
-    "    Example:\n",
-    "        >>> list(BatchSampler(SequentialSampler(range(10)), batch_size=3, drop_last=False))\n",
-    "        [[0, 1, 2], [3, 4, 5], [6, 7, 8], [9]]\n",
-    "        >>> list(BatchSampler(SequentialSampler(range(10)), batch_size=3, drop_last=True))\n",
-    "        [[0, 1, 2], [3, 4, 5], [6, 7, 8]]\n",
-    "    \"\"\"\n",
-    "\n",
-    "    def __init__(self, sampler: Union[Sampler[int], Iterable[int]], batch_size: int, drop_last: bool, probs, num_strata) -> None:\n",
-    "        # Since collections.abc.Iterable does not check for `__getitem__`, which\n",
-    "        # is one way for an object to be an iterable, we don't do an `isinstance`\n",
-    "        # check here.\n",
-    "        if not isinstance(batch_size, int) or isinstance(batch_size, bool) or \\\n",
-    "                batch_size <= 0:\n",
-    "            raise ValueError(f\"batch_size should be a positive integer value, but got batch_size={batch_size}\")\n",
-    "        if not isinstance(drop_last, bool):\n",
-    "            raise ValueError(f\"drop_last should be a boolean value, but got drop_last={drop_last}\")\n",
-    "        self.sampler = sampler\n",
-    "        self.batch_size = batch_size\n",
-    "        self.drop_last = drop_last\n",
-    "        self.probs = probs\n",
-    "        self.num_strata = num_strata\n",
-    "\n",
-    "    def __iter__(self) -> Iterator[List[int]]:\n",
-    "        # Implemented based on the benchmarking in https://github.com/pytorch/pytorch/pull/76951\n",
-    "        stratum = np.repeat(np.random.choice(self.num_strata, p=self.probs), self.batch_size)\n",
-    "        if self.drop_last:\n",
-    "            sampler_iter = iter(self.sampler)\n",
-    "            while True:\n",
-    "                try:\n",
-    "                    batch = [next(sampler_iter) for _ in range(self.batch_size)]\n",
-    "                    yield zip(stratum, batch)\n",
-    "                except StopIteration:\n",
-    "                    break\n",
-    "        else:\n",
-    "            batch = [0] * self.batch_size\n",
-    "            idx_in_batch = 0\n",
-    "            for idx in self.sampler:\n",
-    "                batch[idx_in_batch] = idx\n",
-    "                idx_in_batch += 1\n",
-    "                if idx_in_batch == self.batch_size:\n",
-    "                    yield zip(stratum, batch)\n",
-    "                    idx_in_batch = 0\n",
-    "                    batch = [0] * self.batch_size\n",
-    "            if idx_in_batch > 0:\n",
-    "                yield zip(stratum, batch[:idx_in_batch])\n",
-    "\n",
-    "    def __len__(self) -> int:\n",
-    "        # Can only be called if self.sampler has __len__ implemented\n",
-    "        # We cannot enforce this condition, so we turn off typechecking for the\n",
-    "        # implementation below.\n",
-    "        # Somewhat related: see NOTE [ Lack of Default `__len__` in Python Abstract Base Classes ]\n",
-    "        if self.drop_last:\n",
-    "            return len(self.sampler) // self.batch_size  # type: ignore[arg-type]\n",
-    "        else:\n",
-    "            return (len(self.sampler) + self.batch_size - 1) // self.batch_size  # type: ignore[arg-type]"
+    "from torch.utils.data import BatchSampler, SequentialSampler, Sampler\n",
+    "from typing import Iterator, Iterable, Optional, Sequence, List, TypeVar, Generic, Sized, Union\n"
    ]
   },
   {
