--- a/sbmodels/CPA_Kang.ipynb
+++ b/sbmodels/CPA_Kang.ipynb
@@ -958,10 +958,342 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'CD8 T_stimulated': {'all_genes_mean_R2': 0.9969711776573225,\n",
+       "  'all_genes_var_R2': 0.9976384156702555,\n",
+       "  'all_genes_mean_MSE': 0.0011710796,\n",
+       "  'all_genes_var_MSE': 5.36167,\n",
+       "  'all_genes_corr_mtx_R2': 0.24975381478707706,\n",
+       "  'all_genes_cov_mtx_R2': 0.9931683590404871,\n",
+       "  'all_genes_corr_mtx_MSE': 0.006350497222879682,\n",
+       "  'all_genes_cov_mtx_MSE': 0.0014218069585303363,\n",
+       "  'Top_60_DEGs_mean_R2': 0.9973395338419994,\n",
+       "  'Top_60_DEGs_var_R2': 0.9983251622269926,\n",
+       "  'Top_60_DEGs_mean_MSE': 0.07133677,\n",
+       "  'Top_60_DEGs_var_MSE': 429.7349,\n",
+       "  'Top_60_DEGs_corr_mtx_R2': 0.7306117884401191,\n",
+       "  'Top_60_DEGs_cov_mtx_R2': 0.9963370838042566,\n",
+       "  'Top_60_DEGs_corr_mtx_MSE': 0.031337234644441575,\n",
+       "  'Top_60_DEGs_cov_mtx_MSE': 8.327171065418383,\n",
+       "  'Top_50_DEGs_mean_R2': 0.9974768278894265,\n",
+       "  'Top_50_DEGs_var_R2': 0.998364343278949,\n",
+       "  'Top_50_DEGs_mean_MSE': 0.08222179,\n",
+       "  'Top_50_DEGs_var_MSE': 515.4047,\n",
+       "  'Top_50_DEGs_corr_mtx_R2': 0.7490131633807102,\n",
+       "  'Top_50_DEGs_cov_mtx_R2': 0.9967420018053221,\n",
+       "  'Top_50_DEGs_corr_mtx_MSE': 0.03374582681109881,\n",
+       "  'Top_50_DEGs_cov_mtx_MSE': 11.775734193891848,\n",
+       "  'Top_20_DEGs_mean_R2': 0.9983492617178829,\n",
+       "  'Top_20_DEGs_var_R2': 0.9626759077472963,\n",
+       "  'Top_20_DEGs_mean_MSE': 0.064521804,\n",
+       "  'Top_20_DEGs_var_MSE': 228.99223,\n",
+       "  'Top_20_DEGs_corr_mtx_R2': 0.7881854558944865,\n",
+       "  'Top_20_DEGs_cov_mtx_R2': 0.9232935967242993,\n",
+       "  'Top_20_DEGs_corr_mtx_MSE': 0.045877475799760335,\n",
+       "  'Top_20_DEGs_cov_mtx_MSE': 15.49564301374239,\n",
+       "  'Top_10_DEGs_mean_R2': 0.9994697072861929,\n",
+       "  'Top_10_DEGs_var_R2': 0.9645181953604622,\n",
+       "  'Top_10_DEGs_mean_MSE': 0.12248932,\n",
+       "  'Top_10_DEGs_var_MSE': 431.50067,\n",
+       "  'Top_10_DEGs_corr_mtx_R2': 0.8606999905954974,\n",
+       "  'Top_10_DEGs_cov_mtx_R2': 0.9352232961787137,\n",
+       "  'Top_10_DEGs_corr_mtx_MSE': 0.054054688119214725,\n",
+       "  'Top_10_DEGs_cov_mtx_MSE': 48.04642524847651},\n",
+       " 'CD4 T_stimulated': {'all_genes_mean_R2': 0.9992433841506658,\n",
+       "  'all_genes_var_R2': 0.9959252765001247,\n",
+       "  'all_genes_mean_MSE': 0.0001676622,\n",
+       "  'all_genes_var_MSE': 15.156299,\n",
+       "  'all_genes_corr_mtx_R2': 0.29904773096888737,\n",
+       "  'all_genes_cov_mtx_R2': 0.9946101749778644,\n",
+       "  'all_genes_corr_mtx_MSE': 0.0009876355637947018,\n",
+       "  'all_genes_cov_mtx_MSE': 0.0030669251274413785,\n",
+       "  'Top_160_DEGs_mean_R2': 0.9992957574116813,\n",
+       "  'Top_160_DEGs_var_R2': 0.9958959800746957,\n",
+       "  'Top_160_DEGs_mean_MSE': 0.0044988114,\n",
+       "  'Top_160_DEGs_var_MSE': 473.50977,\n",
+       "  'Top_160_DEGs_corr_mtx_R2': 0.7271602157646702,\n",
+       "  'Top_160_DEGs_cov_mtx_R2': 0.9948306617654181,\n",
+       "  'Top_160_DEGs_corr_mtx_MSE': 0.006062769642723203,\n",
+       "  'Top_160_DEGs_cov_mtx_MSE': 2.986455631632899,\n",
+       "  'Top_50_DEGs_mean_R2': 0.9995772517460364,\n",
+       "  'Top_50_DEGs_var_R2': 0.9998808814148524,\n",
+       "  'Top_50_DEGs_mean_MSE': 0.009015132,\n",
+       "  'Top_50_DEGs_var_MSE': 1407.0051,\n",
+       "  'Top_50_DEGs_corr_mtx_R2': 0.7709137898924161,\n",
+       "  'Top_50_DEGs_cov_mtx_R2': 0.9990538671599445,\n",
+       "  'Top_50_DEGs_corr_mtx_MSE': 0.017070947554768384,\n",
+       "  'Top_50_DEGs_cov_mtx_MSE': 28.272701337829144,\n",
+       "  'Top_20_DEGs_mean_R2': 0.9985546175777884,\n",
+       "  'Top_20_DEGs_var_R2': 0.991431771634031,\n",
+       "  'Top_20_DEGs_mean_MSE': 0.0079798335,\n",
+       "  'Top_20_DEGs_var_MSE': 26.044836,\n",
+       "  'Top_20_DEGs_corr_mtx_R2': 0.8109388006661319,\n",
+       "  'Top_20_DEGs_cov_mtx_R2': 0.9225194964294842,\n",
+       "  'Top_20_DEGs_corr_mtx_MSE': 0.03400064263731775,\n",
+       "  'Top_20_DEGs_cov_mtx_MSE': 1.3608655786431916,\n",
+       "  'Top_10_DEGs_mean_R2': 0.9993673064456199,\n",
+       "  'Top_10_DEGs_var_R2': 0.9991922728555261,\n",
+       "  'Top_10_DEGs_mean_MSE': 0.006797892,\n",
+       "  'Top_10_DEGs_var_MSE': 47.585033,\n",
+       "  'Top_10_DEGs_corr_mtx_R2': 0.850761690526847,\n",
+       "  'Top_10_DEGs_cov_mtx_R2': 0.9381357357020919,\n",
+       "  'Top_10_DEGs_corr_mtx_MSE': 0.05054747598553358,\n",
+       "  'Top_10_DEGs_cov_mtx_MSE': 4.8458864431194595},\n",
+       " 'B_stimulated': {'all_genes_mean_R2': 0.8192964432130624,\n",
+       "  'all_genes_var_R2': 0.0005313531816206606,\n",
+       "  'all_genes_mean_MSE': 0.06221601,\n",
+       "  'all_genes_var_MSE': 72553.96,\n",
+       "  'all_genes_corr_mtx_R2': 0.015711433124941655,\n",
+       "  'all_genes_cov_mtx_R2': 0.00047342442105207874,\n",
+       "  'all_genes_corr_mtx_MSE': 0.031067576021827876,\n",
+       "  'all_genes_cov_mtx_MSE': 14.72547736677573,\n",
+       "  'Top_122_DEGs_mean_R2': 0.8238245942501832,\n",
+       "  'Top_122_DEGs_var_R2': 0.7299677474672103,\n",
+       "  'Top_122_DEGs_mean_MSE': 2.0475829,\n",
+       "  'Top_122_DEGs_var_MSE': 511.3046,\n",
+       "  'Top_122_DEGs_corr_mtx_R2': 0.28021256364769975,\n",
+       "  'Top_122_DEGs_cov_mtx_R2': 0.5284740825919776,\n",
+       "  'Top_122_DEGs_corr_mtx_MSE': 0.07985628241746828,\n",
+       "  'Top_122_DEGs_cov_mtx_MSE': 16.920158129420717,\n",
+       "  'Top_50_DEGs_mean_R2': 0.8196432400472612,\n",
+       "  'Top_50_DEGs_var_R2': 0.7345622223386394,\n",
+       "  'Top_50_DEGs_mean_MSE': 2.8633137,\n",
+       "  'Top_50_DEGs_var_MSE': 1058.7034,\n",
+       "  'Top_50_DEGs_corr_mtx_R2': 0.35166623165949423,\n",
+       "  'Top_50_DEGs_cov_mtx_R2': 0.5203186202161902,\n",
+       "  'Top_50_DEGs_corr_mtx_MSE': 0.10634498169896114,\n",
+       "  'Top_50_DEGs_cov_mtx_MSE': 74.11166896523682,\n",
+       "  'Top_20_DEGs_mean_R2': 0.899538132731174,\n",
+       "  'Top_20_DEGs_var_R2': 0.8574352747180821,\n",
+       "  'Top_20_DEGs_mean_MSE': 2.576577,\n",
+       "  'Top_20_DEGs_var_MSE': 1785.4014,\n",
+       "  'Top_20_DEGs_corr_mtx_R2': 0.4906399669466994,\n",
+       "  'Top_20_DEGs_cov_mtx_R2': 0.7456051939599944,\n",
+       "  'Top_20_DEGs_corr_mtx_MSE': 0.09176765787722267,\n",
+       "  'Top_20_DEGs_cov_mtx_MSE': 94.039931398848,\n",
+       "  'Top_10_DEGs_mean_R2': 0.8994227179058721,\n",
+       "  'Top_10_DEGs_var_R2': 0.8417212270451989,\n",
+       "  'Top_10_DEGs_mean_MSE': 4.8662853,\n",
+       "  'Top_10_DEGs_var_MSE': 3567.9343,\n",
+       "  'Top_10_DEGs_corr_mtx_R2': 0.7160174534082836,\n",
+       "  'Top_10_DEGs_cov_mtx_R2': 0.7991336008959161,\n",
+       "  'Top_10_DEGs_corr_mtx_MSE': 0.06220649580396061,\n",
+       "  'Top_10_DEGs_cov_mtx_MSE': 369.1975848657358},\n",
+       " 'CD14 Mono_stimulated': {'all_genes_mean_R2': 0.9954457892705507,\n",
+       "  'all_genes_var_R2': 0.8485697428492941,\n",
+       "  'all_genes_mean_MSE': 0.16951376,\n",
+       "  'all_genes_var_MSE': 9623.697,\n",
+       "  'all_genes_corr_mtx_R2': 0.23373706463563448,\n",
+       "  'all_genes_cov_mtx_R2': 0.8832292714955111,\n",
+       "  'all_genes_corr_mtx_MSE': 0.003995728235583064,\n",
+       "  'all_genes_cov_mtx_MSE': 2.086230585814745,\n",
+       "  'Top_445_DEGs_mean_R2': 0.9954332937195478,\n",
+       "  'Top_445_DEGs_var_R2': 0.8469134483845832,\n",
+       "  'Top_445_DEGs_mean_MSE': 1.8906862,\n",
+       "  'Top_445_DEGs_var_MSE': 108130.5,\n",
+       "  'Top_445_DEGs_corr_mtx_R2': 0.6921371145450794,\n",
+       "  'Top_445_DEGs_cov_mtx_R2': 0.8831122738249142,\n",
+       "  'Top_445_DEGs_corr_mtx_MSE': 0.007229328336080843,\n",
+       "  'Top_445_DEGs_cov_mtx_MSE': 263.1412069687383,\n",
+       "  'Top_50_DEGs_mean_R2': 0.9941710870617783,\n",
+       "  'Top_50_DEGs_var_R2': 0.9580077951380966,\n",
+       "  'Top_50_DEGs_mean_MSE': 2.7706225,\n",
+       "  'Top_50_DEGs_var_MSE': 34657.285,\n",
+       "  'Top_50_DEGs_corr_mtx_R2': 0.8318191507418538,\n",
+       "  'Top_50_DEGs_cov_mtx_R2': 0.9650109686663417,\n",
+       "  'Top_50_DEGs_corr_mtx_MSE': 0.01804352828503578,\n",
+       "  'Top_50_DEGs_cov_mtx_MSE': 859.0485962130434,\n",
+       "  'Top_20_DEGs_mean_R2': 0.995501229962594,\n",
+       "  'Top_20_DEGs_var_R2': 0.9687302406883666,\n",
+       "  'Top_20_DEGs_mean_MSE': 4.3220625,\n",
+       "  'Top_20_DEGs_var_MSE': 66154.37,\n",
+       "  'Top_20_DEGs_corr_mtx_R2': 0.8147776212845869,\n",
+       "  'Top_20_DEGs_cov_mtx_R2': 0.9773626856494998,\n",
+       "  'Top_20_DEGs_corr_mtx_MSE': 0.018903099798023,\n",
+       "  'Top_20_DEGs_cov_mtx_MSE': 3768.411487482868,\n",
+       "  'Top_10_DEGs_mean_R2': 0.9946364744272437,\n",
+       "  'Top_10_DEGs_var_R2': 0.9608144556951291,\n",
+       "  'Top_10_DEGs_mean_MSE': 8.288808,\n",
+       "  'Top_10_DEGs_var_MSE': 126076.7,\n",
+       "  'Top_10_DEGs_corr_mtx_R2': 0.8518016848898619,\n",
+       "  'Top_10_DEGs_cov_mtx_R2': 0.9702181977538918,\n",
+       "  'Top_10_DEGs_corr_mtx_MSE': 0.018671897531863865,\n",
+       "  'Top_10_DEGs_cov_mtx_MSE': 13846.933352886756},\n",
+       " 'T_stimulated': {'all_genes_mean_R2': 0.994106010669236,\n",
+       "  'all_genes_var_R2': 0.9751839466532828,\n",
+       "  'all_genes_mean_MSE': 0.0012066967,\n",
+       "  'all_genes_var_MSE': 28.715384,\n",
+       "  'all_genes_corr_mtx_R2': 0.19431518339355047,\n",
+       "  'all_genes_cov_mtx_R2': 0.8864568054443683,\n",
+       "  'all_genes_corr_mtx_MSE': 0.007537935868465275,\n",
+       "  'all_genes_cov_mtx_MSE': 0.006802860619820036,\n",
+       "  'Top_63_DEGs_mean_R2': 0.9942549958492264,\n",
+       "  'Top_63_DEGs_var_R2': 0.9844157279060912,\n",
+       "  'Top_63_DEGs_mean_MSE': 0.06323019,\n",
+       "  'Top_63_DEGs_var_MSE': 2252.1855,\n",
+       "  'Top_63_DEGs_corr_mtx_R2': 0.6775743409109339,\n",
+       "  'Top_63_DEGs_cov_mtx_R2': 0.9517035988373161,\n",
+       "  'Top_63_DEGs_corr_mtx_MSE': 0.017246126229063772,\n",
+       "  'Top_63_DEGs_cov_mtx_MSE': 38.61933992080572,\n",
+       "  'Top_50_DEGs_mean_R2': 0.9944502322435614,\n",
+       "  'Top_50_DEGs_var_R2': 0.9858351879007362,\n",
+       "  'Top_50_DEGs_mean_MSE': 0.07559625,\n",
+       "  'Top_50_DEGs_var_MSE': 2832.6846,\n",
+       "  'Top_50_DEGs_corr_mtx_R2': 0.730913344549612,\n",
+       "  'Top_50_DEGs_cov_mtx_R2': 0.9572406049326587,\n",
+       "  'Top_50_DEGs_corr_mtx_MSE': 0.019087959095225766,\n",
+       "  'Top_50_DEGs_cov_mtx_MSE': 60.542287835443716,\n",
+       "  'Top_20_DEGs_mean_R2': 0.9971713562602197,\n",
+       "  'Top_20_DEGs_var_R2': 0.9008633726083393,\n",
+       "  'Top_20_DEGs_mean_MSE': 0.040664803,\n",
+       "  'Top_20_DEGs_var_MSE': 366.39117,\n",
+       "  'Top_20_DEGs_corr_mtx_R2': 0.7869736518411098,\n",
+       "  'Top_20_DEGs_cov_mtx_R2': 0.9058449313873741,\n",
+       "  'Top_20_DEGs_corr_mtx_MSE': 0.02105877500426405,\n",
+       "  'Top_20_DEGs_cov_mtx_MSE': 23.862352007689523,\n",
+       "  'Top_10_DEGs_mean_R2': 0.9972502894109742,\n",
+       "  'Top_10_DEGs_var_R2': 0.8503525790275993,\n",
+       "  'Top_10_DEGs_mean_MSE': 0.06477004,\n",
+       "  'Top_10_DEGs_var_MSE': 644.5416,\n",
+       "  'Top_10_DEGs_corr_mtx_R2': 0.8214422048974638,\n",
+       "  'Top_10_DEGs_cov_mtx_R2': 0.8777935811935533,\n",
+       "  'Top_10_DEGs_corr_mtx_MSE': 0.03307826894547855,\n",
+       "  'Top_10_DEGs_cov_mtx_MSE': 82.67483529797897},\n",
+       " 'NK_stimulated': {'all_genes_mean_R2': 0.9984904441794815,\n",
+       "  'all_genes_var_R2': 0.957170633657521,\n",
+       "  'all_genes_mean_MSE': 0.00041716365,\n",
+       "  'all_genes_var_MSE': 2.6725965,\n",
+       "  'all_genes_corr_mtx_R2': 0.17156846533811146,\n",
+       "  'all_genes_cov_mtx_R2': 0.9018171998680113,\n",
+       "  'all_genes_corr_mtx_MSE': 0.00541605792199585,\n",
+       "  'all_genes_cov_mtx_MSE': 0.001002012420217589,\n",
+       "  'Top_67_DEGs_mean_R2': 0.9992030565415143,\n",
+       "  'Top_67_DEGs_var_R2': 0.9712079361453971,\n",
+       "  'Top_67_DEGs_mean_MSE': 0.010770038,\n",
+       "  'Top_67_DEGs_var_MSE': 32.801342,\n",
+       "  'Top_67_DEGs_corr_mtx_R2': 0.6482845335037519,\n",
+       "  'Top_67_DEGs_cov_mtx_R2': 0.950373630646754,\n",
+       "  'Top_67_DEGs_corr_mtx_MSE': 0.016250904179601948,\n",
+       "  'Top_67_DEGs_cov_mtx_MSE': 0.842526051335511,\n",
+       "  'Top_50_DEGs_mean_R2': 0.9992275728054728,\n",
+       "  'Top_50_DEGs_var_R2': 0.9713294277421893,\n",
+       "  'Top_50_DEGs_mean_MSE': 0.013811192,\n",
+       "  'Top_50_DEGs_var_MSE': 43.530373,\n",
+       "  'Top_50_DEGs_corr_mtx_R2': 0.6686229468265374,\n",
+       "  'Top_50_DEGs_cov_mtx_R2': 0.9522077904047894,\n",
+       "  'Top_50_DEGs_corr_mtx_MSE': 0.020470256358729018,\n",
+       "  'Top_50_DEGs_cov_mtx_MSE': 1.4439340154119504,\n",
+       "  'Top_20_DEGs_mean_R2': 0.9989635236272107,\n",
+       "  'Top_20_DEGs_var_R2': 0.9796362449533745,\n",
+       "  'Top_20_DEGs_mean_MSE': 0.01991625,\n",
+       "  'Top_20_DEGs_var_MSE': 73.69862,\n",
+       "  'Top_20_DEGs_corr_mtx_R2': 0.7653446383751,\n",
+       "  'Top_20_DEGs_cov_mtx_R2': 0.9078029851559206,\n",
+       "  'Top_20_DEGs_corr_mtx_MSE': 0.030388858853703328,\n",
+       "  'Top_20_DEGs_cov_mtx_MSE': 4.025213579974277,\n",
+       "  'Top_10_DEGs_mean_R2': 0.9992598110784926,\n",
+       "  'Top_10_DEGs_var_R2': 0.9876268864223725,\n",
+       "  'Top_10_DEGs_mean_MSE': 0.030423146,\n",
+       "  'Top_10_DEGs_var_MSE': 134.7997,\n",
+       "  'Top_10_DEGs_corr_mtx_R2': 0.8179056570402041,\n",
+       "  'Top_10_DEGs_cov_mtx_R2': 0.9328605767628353,\n",
+       "  'Top_10_DEGs_corr_mtx_MSE': 0.043344205194767546,\n",
+       "  'Top_10_DEGs_cov_mtx_MSE': 14.336954584669245},\n",
+       " 'DC_stimulated': {'all_genes_mean_R2': 0.9952120343542923,\n",
+       "  'all_genes_var_R2': 0.8966087297356837,\n",
+       "  'all_genes_mean_MSE': 0.12115561,\n",
+       "  'all_genes_var_MSE': 9782.443,\n",
+       "  'all_genes_corr_mtx_R2': 0.15442621711492518,\n",
+       "  'all_genes_cov_mtx_R2': 0.8952793698795056,\n",
+       "  'all_genes_corr_mtx_MSE': 0.013563175619639678,\n",
+       "  'all_genes_cov_mtx_MSE': 2.943259120566017,\n",
+       "  'Top_208_DEGs_mean_R2': 0.9959424148527789,\n",
+       "  'Top_208_DEGs_var_R2': 0.9312525910028243,\n",
+       "  'Top_208_DEGs_mean_MSE': 1.9377373,\n",
+       "  'Top_208_DEGs_var_MSE': 104493.09,\n",
+       "  'Top_208_DEGs_corr_mtx_R2': 0.6916219488782971,\n",
+       "  'Top_208_DEGs_cov_mtx_R2': 0.9236843479304193,\n",
+       "  'Top_208_DEGs_corr_mtx_MSE': 0.011342382358419108,\n",
+       "  'Top_208_DEGs_cov_mtx_MSE': 580.1273914081687,\n",
+       "  'Top_50_DEGs_mean_R2': 0.99857359718124,\n",
+       "  'Top_50_DEGs_var_R2': 0.9985399934140521,\n",
+       "  'Top_50_DEGs_mean_MSE': 0.87463003,\n",
+       "  'Top_50_DEGs_var_MSE': 5785.3457,\n",
+       "  'Top_50_DEGs_corr_mtx_R2': 0.7840874963104235,\n",
+       "  'Top_50_DEGs_cov_mtx_R2': 0.9938345596478879,\n",
+       "  'Top_50_DEGs_corr_mtx_MSE': 0.012714602393581097,\n",
+       "  'Top_50_DEGs_cov_mtx_MSE': 229.07083142534216,\n",
+       "  'Top_20_DEGs_mean_R2': 0.9987446668989198,\n",
+       "  'Top_20_DEGs_var_R2': 0.998783471508083,\n",
+       "  'Top_20_DEGs_mean_MSE': 1.7178932,\n",
+       "  'Top_20_DEGs_var_MSE': 13537.896,\n",
+       "  'Top_20_DEGs_corr_mtx_R2': 0.8463781800747112,\n",
+       "  'Top_20_DEGs_cov_mtx_R2': 0.9951080668426007,\n",
+       "  'Top_20_DEGs_corr_mtx_MSE': 0.0151540819380042,\n",
+       "  'Top_20_DEGs_cov_mtx_MSE': 1196.9741627322512,\n",
+       "  'Top_10_DEGs_mean_R2': 0.9996174628659206,\n",
+       "  'Top_10_DEGs_var_R2': 0.9999313922856655,\n",
+       "  'Top_10_DEGs_mean_MSE': 0.8346647,\n",
+       "  'Top_10_DEGs_var_MSE': 89.151215,\n",
+       "  'Top_10_DEGs_corr_mtx_R2': 0.874524298646975,\n",
+       "  'Top_10_DEGs_cov_mtx_R2': 0.9965144025973818,\n",
+       "  'Top_10_DEGs_corr_mtx_MSE': 0.020512056427220225,\n",
+       "  'Top_10_DEGs_cov_mtx_MSE': 738.0632952560077},\n",
+       " 'CD16 Mono_stimulated': {'all_genes_mean_R2': 0.9982832593935109,\n",
+       "  'all_genes_var_R2': 0.9818339383757296,\n",
+       "  'all_genes_mean_MSE': 0.0689758,\n",
+       "  'all_genes_var_MSE': 853.7335,\n",
+       "  'all_genes_corr_mtx_R2': 0.16024183489115582,\n",
+       "  'all_genes_cov_mtx_R2': 0.9783119925846305,\n",
+       "  'all_genes_corr_mtx_MSE': 0.006983063348515355,\n",
+       "  'all_genes_cov_mtx_MSE': 0.23103846140965398,\n",
+       "  'Top_248_DEGs_mean_R2': 0.9983686576643223,\n",
+       "  'Top_248_DEGs_var_R2': 0.9815451707359577,\n",
+       "  'Top_248_DEGs_mean_MSE': 1.3771942,\n",
+       "  'Top_248_DEGs_var_MSE': 17210.434,\n",
+       "  'Top_248_DEGs_corr_mtx_R2': 0.7256541667332647,\n",
+       "  'Top_248_DEGs_cov_mtx_R2': 0.9785326837141516,\n",
+       "  'Top_248_DEGs_corr_mtx_MSE': 0.009878195541981279,\n",
+       "  'Top_248_DEGs_cov_mtx_MSE': 93.13363516213896,\n",
+       "  'Top_50_DEGs_mean_R2': 0.9987048354657597,\n",
+       "  'Top_50_DEGs_var_R2': 0.9933336304214405,\n",
+       "  'Top_50_DEGs_mean_MSE': 5.795475,\n",
+       "  'Top_50_DEGs_var_MSE': 30945.367,\n",
+       "  'Top_50_DEGs_corr_mtx_R2': 0.8283046161892076,\n",
+       "  'Top_50_DEGs_cov_mtx_R2': 0.9907278637848245,\n",
+       "  'Top_50_DEGs_corr_mtx_MSE': 0.01375479445581483,\n",
+       "  'Top_50_DEGs_cov_mtx_MSE': 741.7240054949896,\n",
+       "  'Top_20_DEGs_mean_R2': 0.9979245220393244,\n",
+       "  'Top_20_DEGs_var_R2': 0.9946792174262681,\n",
+       "  'Top_20_DEGs_mean_MSE': 1.3957777,\n",
+       "  'Top_20_DEGs_var_MSE': 10942.694,\n",
+       "  'Top_20_DEGs_corr_mtx_R2': 0.8686581304382082,\n",
+       "  'Top_20_DEGs_cov_mtx_R2': 0.9944456982556286,\n",
+       "  'Top_20_DEGs_corr_mtx_MSE': 0.014461657862846457,\n",
+       "  'Top_20_DEGs_cov_mtx_MSE': 791.0273619117768,\n",
+       "  'Top_10_DEGs_mean_R2': 0.9979803970424556,\n",
+       "  'Top_10_DEGs_var_R2': 0.9996286344106728,\n",
+       "  'Top_10_DEGs_mean_MSE': 1.6158644,\n",
+       "  'Top_10_DEGs_var_MSE': 466.2193,\n",
+       "  'Top_10_DEGs_corr_mtx_R2': 0.8498046924304778,\n",
+       "  'Top_10_DEGs_cov_mtx_R2': 0.9971600200087325,\n",
+       "  'Top_10_DEGs_corr_mtx_MSE': 0.015155004295542734,\n",
+       "  'Top_10_DEGs_cov_mtx_MSE': 254.01377166417643}}"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r2_mses"
+   ]
   },
   {
    "cell_type": "code",
