--- a/cfm/train_llm.ipynb
+++ b/cfm/train_llm.ipynb
@@ -110,12 +110,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "batch_size = 128\n",
-    "base_learning_rate = 5e-5\n",
+    "base_learning_rate = 5e-4\n",
     "weight_decay=0.0\n",
     "total_epoch = 5000\n",
     "warmup_epoch = 1"
@@ -155,6 +155,13 @@
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "model = MAE(X.shape[1])\n",
     "device = 'cuda'\n",
@@ -164,14 +171,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Adjusting learning rate of group 0 to 5.0000e-05.\n"
+      "Adjusting learning rate of group 0 to 5.0000e-04.\n"
      ]
     }
    ],
@@ -185,14 +192,113 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "tv: 2146.519, mtv: 2184.260:   4%|█▍                                    | 100/2566 [00:35<15:28,  2.66it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adjusting learning rate of group 0 to 5.0000e-04.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "tv: 2005.865, mtv: 2030.292:   8%|██▉                                   | 200/2566 [01:11<14:45,  2.67it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adjusting learning rate of group 0 to 5.0000e-04.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "tv: 1740.465, mtv: 1748.997:  12%|████▍                                 | 300/2566 [01:48<14:13,  2.66it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adjusting learning rate of group 0 to 5.0000e-04.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "tv: 1553.604, mtv: 1554.386:  16%|█████▉                                | 400/2566 [02:25<13:36,  2.65it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adjusting learning rate of group 0 to 5.0000e-04.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "tv: 1450.413, mtv: 1441.355:  19%|███████▍                              | 500/2566 [03:01<12:58,  2.66it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adjusting learning rate of group 0 to 5.0000e-04.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "tv: 1373.340, mtv: 1388.354:  23%|████████▉                             | 600/2566 [03:38<12:30,  2.62it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adjusting learning rate of group 0 to 5.0000e-04.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "tv: 1334.505, mtv: 1356.394:  27%|██████████▎                           | 700/2566 [04:15<11:44,  2.65it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adjusting learning rate of group 0 to 5.0000e-04.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "tv: 1332.454, mtv: 1327.627:  30%|███████████▏                          | 757/2566 [04:36<10:34,  2.85it/s]"
+     ]
+    }
+   ],
    "source": [
     "step_count = 0\n",
     "optim.zero_grad()\n",
